--- a/internal/assets/manifests/istio-discovery/templates/serviceaccount.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.global.mode "ACTIVE" }}
 apiVersion: v1
 kind: ServiceAccount
 {{ include "toYamlIf" (dict "value" .Values.global.imagePullSecrets "key" "imagePullSecrets") }}
@@ -7,4 +8,4 @@ metadata:
   labels:
     app: istiod
     release: {{ .Release.Name }}
----
+{{- end }}
