--- a/internal/assets/manifests/istio-discovery/templates/validatingwebhookconfiguration.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/validatingwebhookconfiguration.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.global.configValidation }}
+{{- if and (eq .Values.global.mode "ACTIVE") .Values.global.configValidation }}
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
