--- a/internal/components/discovery/testdata/icp-expected-values.yaml
+++ b/internal/components/discovery/testdata/icp-expected-values.yaml
@@ -57,6 +57,7 @@ global:
   caAddress: localhost
   distribution: official
   meshID: mesh1
+  mode: ACTIVE
   multiCluster:
     clusterName: demo-cluster1
 pilot:
