--- a/internal/assets/manifests/istio-discovery/templates/autoscale.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/autoscale.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.pilot.autoscaleEnabled .Values.pilot.autoscaleMin .Values.pilot.autoscaleMax }}
+{{- if and (eq .Values.global.mode "ACTIVE") .Values.pilot.autoscaleEnabled .Values.pilot.autoscaleMin .Values.pilot.autoscaleMax }}
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
