--- a/internal/assets/manifests/istio-discovery/templates/clusterrolebinding.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/clusterrolebinding.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.global.mode "ACTIVE" }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -13,3 +14,4 @@ subjects:
   - kind: ServiceAccount
     name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
     namespace: {{ .Values.global.istioNamespace }}
+{{- end }}
