--- a/internal/assets/manifests/istio-discovery/templates/deployment.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.global.mode "ACTIVE" }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -204,4 +205,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
----
+{{- end }}
