--- a/internal/assets/manifests/istio-discovery/templates/poddisruptionbudget.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/poddisruptionbudget.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.global.defaultPodDisruptionBudget.enabled }}
+{{- if and (eq .Values.global.mode "ACTIVE") .Values.global.defaultPodDisruptionBudget.enabled }}
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
