--- a/internal/assets/manifests/istio-discovery/templates/role.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/role.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.global.mode "ACTIVE" }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -18,3 +19,5 @@ rules:
   resources: ["secrets"]
   # TODO lock this down to istio-ca-cert if not using the DNS cert mesh config
   verbs: ["create", "get", "watch", "list", "update", "delete"]
+{{- end }}
+---
