--- a/internal/assets/manifests/istio-discovery/templates/rolebinding.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/rolebinding.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.global.mode "ACTIVE" }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -14,3 +15,5 @@ subjects:
   - kind: ServiceAccount
     name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
     namespace: {{ .Release.Namespace }}
+{{- end }}
+---
