--- a/internal/assets/manifests/istio-discovery/templates/service.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/service.yaml
@@ -9,6 +9,7 @@ metadata:
     istio: istiod
     release: {{ .Release.Name }}
 spec:
+  type: ClusterIP
   ports:
     - port: 15010
       name: grpc-xds # plaintext
@@ -23,7 +24,13 @@ spec:
     - port: 15014
       name: http-monitoring # prometheus stats
       protocol: TCP
+{{- if eq .Values.global.mode "PASSIVE" }}
+  clusterIP: None
+  clusterIPs:
+  - None
+{{- else }}
   selector:
     app: istiod
     istio.io/rev: {{ include "namespaced-revision" . }}
+{{- end }}
 ---
