--- a/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
@@ -1577,6 +1577,7 @@ metadata:
   name: istiod-cp-v111x
   namespace: istio-system
 spec:
+  type: ClusterIP
   ports:
   - name: grpc-xds
     port: 15010
