Add istioControlPlaneName to ICP status

--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -6406,6 +6406,8 @@ spec:
                 items:
                   type: string
                 type: array
+              istioControlPlaneName:
+                type: string
               meshConfig:
                 properties:
                   accessLogEncoding:
@@ -13721,6 +13723,8 @@ spec:
                 items:
                   type: string
                 type: array
+              istioControlPlaneName:
+                type: string
               meshConfig:
                 properties:
                   accessLogEncoding:
