Fix PeerIstioControlPlane RBAC roles

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -306,3 +306,10 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - servicemesh.cisco.com
+  resources:
+  - peeristiocontrolplanes
+  verbs:
+  - list
+  - watch
