Add clusterRegistryAPIEnabled option to ICP controller

--- a/deploy/charts/istio-operator/values.yaml
+++ b/deploy/charts/istio-operator/values.yaml
@@ -51,3 +51,7 @@ leaderElection:
   enabled: true
   namespace: "istio-system"
   nameOverride: ""
+
+clusterRegistry:
+  clusterAPI:
+    enabled: false
