--- a/deploy/charts/istio-operator/templates/operator-deployment.yaml
+++ b/deploy/charts/istio-operator/templates/operator-deployment.yaml
@@ -61,6 +61,9 @@ spec:
           {{- end }}
           - "--leader-election-namespace={{ .Values.leaderElection.namespace }}"
           {{- end }}
+          {{- if .Values.clusterRegistry.clusterAPI.enabled }}
+          - "--cluster-registry-api-enabled"
+          {{- end }}
           {{- range $value := .Values.extraArgs }}
           - {{ quote $value }}
           {{- end }}
