Add apiserver-endpoint-address option to ICP controller

--- a/deploy/charts/istio-operator/values.yaml
+++ b/deploy/charts/istio-operator/values.yaml
@@ -52,6 +52,7 @@ leaderElection:
   namespace: "istio-system"
   nameOverride: ""
 
+apiServerEndpointAddress: ""
 clusterRegistry:
   clusterAPI:
     enabled: false
