--- a/deploy/charts/istio-operator/templates/operator-deployment.yaml
+++ b/deploy/charts/istio-operator/templates/operator-deployment.yaml
@@ -64,6 +64,7 @@ spec:
           {{- if .Values.clusterRegistry.clusterAPI.enabled }}
           - "--cluster-registry-api-enabled"
           {{- end }}
+          - "--apiserver-endpoint-address={{ .Values.apiServerEndpointAddress }}"
           {{- range $value := .Values.extraArgs }}
           - {{ quote $value }}
           {{- end }}
