--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -160,6 +160,13 @@ rules:
   verbs:
   - approve
 - apiGroups:
+  - clusterregistry.k8s.cisco.com
+  resources:
+  - clusters
+  verbs:
+  - list
+  - watch
+- apiGroups:
   - coordination.k8s.io
   resources:
   - leases
