do not reconcile istio resource for meshexpansion on passive clusters

--- a/internal/assets/manifests/istio-meshexpansion/templates/istio-cross-network-gw.yaml
+++ b/internal/assets/manifests/istio-meshexpansion/templates/istio-cross-network-gw.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.exposeClusterServices }}
+{{ if and (eq .Values.mode "ACTIVE") .Values.exposeClusterServices }}
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
