--- a/internal/assets/manifests/istio-meshexpansion/templates/istio-meshexpansion-mgw.yaml
+++ b/internal/assets/manifests/istio-meshexpansion/templates/istio-meshexpansion-mgw.yaml
@@ -1,6 +1,6 @@
 {{- define "service" }}
 ports:
-- name: http-status-port
+- name: tcp-status-port
   port: 15021
   protocol: TCP
   targetPort: 15021
