--- a/internal/assets/manifests/istio-meshexpansion/templates/istiod-expansion-vs.yaml
+++ b/internal/assets/manifests/istio-meshexpansion/templates/istiod-expansion-vs.yaml
@@ -1,4 +1,4 @@
-{{ if or .Values.exposeIstiod .Values.exposeWebhook }}
+{{ if and (eq .Values.mode "ACTIVE") (or .Values.exposeIstiod .Values.exposeWebhook) }}
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
