--- a/internal/assets/manifests/resource-sync-rule/templates/peer-istio-control-plane-resource-sync-rule.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/peer-istio-control-plane-resource-sync-rule.yaml
@@ -15,6 +15,7 @@ spec:
   - match:
       objectKey:
         name: {{ .Values.revision }}
+        namespace: {{ .Release.Namespace }}
   - mutations:
       overrides:
         - parseValue: false
