--- a/internal/components/resourcesyncrule/testdata/rsr-expected-active-resource-dump.yaml
+++ b/internal/components/resourcesyncrule/testdata/rsr-expected-active-resource-dump.yaml
@@ -27,6 +27,23 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
+    cluster-registry.k8s.cisco.com/reader-aggregated: "true"
+    release: istio-resource-sync-rule
+  name: mesh-reader-cp-v111x
+rules:
+  - apiGroups:
+      - servicemesh.cisco.com
+    resources:
+      - istiomeshes
+    verbs:
+      - get
+      - list
+      - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  labels:
     cluster-registry.k8s.cisco.com/controller-aggregated: "true"
     release: istio-resource-sync-rule
   name: peeristiocontrolplane-controller-cp-v111x
@@ -106,6 +123,7 @@ spec:
     - match:
         objectKey:
           name: cp-v111x
+          namespace: istio-system
     - mutations:
         overrides:
           - parseValue: false
