--- a/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
+++ b/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
@@ -33,6 +33,28 @@ metadata:
   labels:
     cluster-registry.k8s.cisco.com/controller-aggregated: "true"
     release: istio-resource-sync-rule
+  name: mesh-controller-cp-v111x
+rules:
+  - apiGroups:
+      - servicemesh.cisco.com
+    resources:
+      - istiomeshes
+      - istiomeshes/status
+    verbs:
+      - create
+      - update
+      - delete
+      - patch
+      - get
+      - list
+      - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  labels:
+    cluster-registry.k8s.cisco.com/controller-aggregated: "true"
+    release: istio-resource-sync-rule
   name: peeristiocontrolplane-controller-cp-v111x
 rules:
   - apiGroups:
@@ -92,6 +114,26 @@ metadata:
     cluster-registry.k8s.cisco.com/resource-sync-disabled: "true"
   labels:
     release: istio-resource-sync-rule
+  name: mesh-cp-v111x
+spec:
+  groupVersionKind:
+    group: servicemesh.cisco.com
+    kind: IstioMesh
+    version: v1alpha1
+  rules:
+    - match:
+        objectKey:
+          name: mesh1
+          namespace: istio-system
+        syncStatus: true
+---
+apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
+kind: ResourceSyncRule
+metadata:
+  annotations:
+    cluster-registry.k8s.cisco.com/resource-sync-disabled: "true"
+  labels:
+    release: istio-resource-sync-rule
   name: peeristiocontrolplane-cp-v111x
 spec:
   groupVersionKind:
@@ -102,6 +144,7 @@ spec:
     - match:
         objectKey:
           name: cp-v111x
+          namespace: istio-system
     - mutations:
         overrides:
           - parseValue: false
