--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -167,6 +167,18 @@ rules:
   - list
   - watch
 - apiGroups:
+  - clusterregistry.k8s.cisco.com
+  resources:
+  - resourcesyncrules
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - coordination.k8s.io
   resources:
   - leases
