--- a/internal/components/resourcesyncrule/testdata/rsr-expected-active-resource-dump.yaml
+++ b/internal/components/resourcesyncrule/testdata/rsr-expected-active-resource-dump.yaml
@@ -53,8 +53,6 @@ rules:
     resources:
       - istiocontrolplanes
       - peeristiocontrolplanes
-      - istiocontrolplanes/status
-      - peeristiocontrolplanes/status
     verbs:
       - create
       - update
@@ -63,6 +61,15 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - servicemesh.cisco.com
+    resources:
+      - istiocontrolplanes/status
+      - peeristiocontrolplanes/status
+    verbs:
+      - get
+      - update
+      - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
