--- a/deploy/charts/istio-operator/templates/operator-rbac.yaml
+++ b/deploy/charts/istio-operator/templates/operator-rbac.yaml
@@ -298,6 +298,7 @@ rules:
   resources:
   - istiocontrolplanes
   - istiomeshes
+  - peeristiocontrolplanes
   verbs:
   - create
   - delete
@@ -311,6 +312,7 @@ rules:
   resources:
   - istiocontrolplanes/status
   - istiomeshes/status
+  - peeristiocontrolplanes/status
   verbs:
   - get
   - patch
@@ -335,13 +337,6 @@ rules:
   - get
   - patch
   - update
-- apiGroups:
-  - servicemesh.cisco.com
-  resources:
-  - peeristiocontrolplanes
-  verbs:
-  - list
-  - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
