--- a/internal/assets/manifests/resource-sync-rule/templates/mesh-controller-clusterrole.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/mesh-controller-clusterrole.yaml
@@ -10,7 +10,6 @@ rules:
   - apiGroups: ["servicemesh.cisco.com"]
     resources:
     - istiomeshes
-    - istiomeshes/status
     verbs:
     - create
     - update
@@ -19,4 +18,11 @@ rules:
     - get
     - list
     - watch
+  - apiGroups: ["servicemesh.cisco.com"]
+    resources:
+    - istiomeshes/status
+    verbs:
+    - get
+    - update
+    - patch
 {{- end }}
