--- a/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
+++ b/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
@@ -39,7 +39,6 @@ rules:
       - servicemesh.cisco.com
     resources:
       - istiomeshes
-      - istiomeshes/status
     verbs:
       - create
       - update
@@ -48,6 +47,14 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - servicemesh.cisco.com
+    resources:
+      - istiomeshes/status
+    verbs:
+      - get
+      - update
+      - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -62,8 +69,6 @@ rules:
     resources:
       - istiocontrolplanes
       - peeristiocontrolplanes
-      - istiocontrolplanes/status
-      - peeristiocontrolplanes/status
     verbs:
       - create
       - update
@@ -72,6 +77,15 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - servicemesh.cisco.com
+    resources:
+      - istiocontrolplanes/status
+      - peeristiocontrolplanes/status
+    verbs:
+      - get
+      - update
+      - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
