--- a/internal/assets/manifests/resource-sync-rule/templates/istio-multi-cluster-secret-resource-sync-rule.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/istio-multi-cluster-secret-resource-sync-rule.yaml
@@ -13,7 +13,7 @@ spec:
     version: v1
   rules:
   - match:
-      labels:
+    - labels:
       - matchLabels:
           istio.io/rev: {{ include "namespaced-revision" . }}
       content:
