--- a/internal/components/resourcesyncrule/testdata/rsr-expected-active-resource-dump.yaml
+++ b/internal/components/resourcesyncrule/testdata/rsr-expected-active-resource-dump.yaml
@@ -102,7 +102,7 @@ spec:
     version: v1
   rules:
     - match:
-        content:
+      - content:
           - key: type
             value: k8s.cisco.com/istio-reader-secret
         labels:
@@ -128,7 +128,7 @@ spec:
     version: v1alpha1
   rules:
     - match:
-        objectKey:
+      - objectKey:
           name: cp-v111x
           namespace: istio-system
     - mutations:
@@ -140,5 +140,5 @@ spec:
           - parseValue: false
             path: /metadata/name
             type: replace
-            value: printf "%s-%s" .Object.GetName .Cluster.GetName
+            value: '{{ printf "%s-%s" .Object.GetName .Cluster.GetName }}'
         syncStatus: true
