--- a/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
+++ b/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
@@ -118,7 +118,7 @@ spec:
     version: v1
   rules:
     - match:
-        objectKey:
+      - objectKey:
           name: istio-ca-root-cert-cp-v111x
 ---
 apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
@@ -136,7 +136,7 @@ spec:
     version: v1alpha1
   rules:
     - match:
-        objectKey:
+      - objectKey:
           name: mesh1
           namespace: istio-system
         syncStatus: true
@@ -156,7 +156,7 @@ spec:
     version: v1alpha1
   rules:
     - match:
-        objectKey:
+      - objectKey:
           name: cp-v111x
           namespace: istio-system
     - mutations:
@@ -168,5 +168,5 @@ spec:
           - parseValue: false
             path: /metadata/name
             type: replace
-            value: printf "%s-%s" .Object.GetName .Cluster.GetName
+            value: '{{ printf "%s-%s" .Object.GetName .Cluster.GetName }}'
         syncStatus: true
