--- a/internal/components/meshexpansion/testdata/mex-expected-resource-dump.yaml
+++ b/internal/components/meshexpansion/testdata/mex-expected-resource-dump.yaml
@@ -105,6 +105,10 @@ spec:
     env:
     - name: ISTIO_META_ROUTER_MODE
       value: sni-dnat
+    - name: ISTIO_META_REQUESTED_NETWORK_VIEW
+      value: network-bogus
+    - name: ISTIO_META_LOCAL_ENDPOINTS_ONLY
+      value: "true"
     - name: ISTIO_BOGUS_ENV
       value: "true"
   service:
