Add ClusterFeature CRs and matchers

--- a/internal/assets/manifests/resource-sync-rule/templates/istio-ca-root-cert-resource-sync-rule.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/istio-ca-root-cert-resource-sync-rule.yaml
@@ -8,6 +8,10 @@ metadata:
   labels:
     release: {{ .Release.Name }}
 spec:
+  clusterFeatureMatch:
+  - featureName: "istio-ca-root-cert"
+    matchLabels:
+      istio.io/rev: {{ include "namespaced-revision" . }}
   groupVersionKind:
     kind: ConfigMap
     version: v1
