--- a/internal/assets/manifests/resource-sync-rule/templates/istio-multi-cluster-secret-resource-sync-rule.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/istio-multi-cluster-secret-resource-sync-rule.yaml
@@ -8,6 +8,10 @@ metadata:
   labels:
     release: {{ .Release.Name }}
 spec:
+  clusterFeatureMatch:
+    - featureName: "istio-multi-cluster-secret"
+      matchLabels:
+        istio.io/rev: {{ include "namespaced-revision" . }}
   groupVersionKind:
     kind: Secret
     version: v1
