--- a/internal/assets/manifests/resource-sync-rule/templates/peer-istio-control-plane-resource-sync-rule.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/peer-istio-control-plane-resource-sync-rule.yaml
@@ -7,6 +7,10 @@ metadata:
   labels:
     release: {{ .Release.Name }}
 spec:
+  clusterFeatureMatch:
+    - featureName: "peeristiocontrolplane"
+      matchLabels:
+        istio.io/rev: {{ include "namespaced-revision" . }}
   groupVersionKind:
     group: servicemesh.cisco.com
     kind: IstioControlPlane
