--- a/internal/components/resourcesyncrule/testdata/rsr-expected-active-resource-dump.yaml
+++ b/internal/components/resourcesyncrule/testdata/rsr-expected-active-resource-dump.yaml
@@ -89,6 +89,46 @@ rules:
       - watch
 ---
 apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
+kind: ClusterFeature
+metadata:
+  labels:
+    istio.io/rev: cp-v111x.istio-system
+    release: istio-resource-sync-rule
+  name: istio-ca-root-cert-cp-v111x
+spec:
+  featureName: istio-ca-root-cert
+---
+apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
+kind: ClusterFeature
+metadata:
+  labels:
+    istio.io/rev: cp-v111x.istio-system
+    release: istio-resource-sync-rule
+  name: istio-multi-cluster-secret-cp-v111x
+spec:
+  featureName: istio-multi-cluster-secret
+---
+apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
+kind: ClusterFeature
+metadata:
+  labels:
+    istio.io/rev: cp-v111x.istio-system
+    release: istio-resource-sync-rule
+  name: mesh-cp-v111x
+spec:
+  featureName: mesh
+---
+apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
+kind: ClusterFeature
+metadata:
+  labels:
+    istio.io/rev: cp-v111x.istio-system
+    release: istio-resource-sync-rule
+  name: peeristiocontrolplane-cp-v111x
+spec:
+  featureName: peeristiocontrolplane
+---
+apiVersion: clusterregistry.k8s.cisco.com/v1alpha1
 kind: ResourceSyncRule
 metadata:
   annotations:
@@ -97,17 +137,21 @@ metadata:
     release: istio-resource-sync-rule
   name: istio-multi-cluster-secret-cp-v111x
 spec:
+  clusterFeatureMatch:
+    - featureName: istio-multi-cluster-secret
+      matchLabels:
+        istio.io/rev: cp-v111x.istio-system
   groupVersionKind:
     kind: Secret
     version: v1
   rules:
     - match:
-      - content:
-          - key: type
-            value: k8s.cisco.com/istio-reader-secret
-        labels:
-          - matchLabels:
-              istio.io/rev: cp-v111x.istio-system
+        - content:
+            - key: type
+              value: k8s.cisco.com/istio-reader-secret
+          labels:
+            - matchLabels:
+                istio.io/rev: cp-v111x.istio-system
       mutations:
         labels:
           add:
@@ -122,15 +166,19 @@ metadata:
     release: istio-resource-sync-rule
   name: peeristiocontrolplane-cp-v111x
 spec:
+  clusterFeatureMatch:
+    - featureName: peeristiocontrolplane
+      matchLabels:
+        istio.io/rev: cp-v111x.istio-system
   groupVersionKind:
     group: servicemesh.cisco.com
     kind: IstioControlPlane
     version: v1alpha1
   rules:
     - match:
-      - objectKey:
-          name: cp-v111x
-          namespace: istio-system
+        - objectKey:
+            name: cp-v111x
+            namespace: istio-system
     - mutations:
         overrides:
           - parseValue: false
