Add RBAC rules to be able to manipulate ClusterFeature CRs

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -162,13 +162,7 @@ rules:
 - apiGroups:
   - clusterregistry.k8s.cisco.com
   resources:
-  - clusters
-  verbs:
-  - list
-  - watch
-- apiGroups:
-  - clusterregistry.k8s.cisco.com
-  resources:
+  - clusterfeatures
   - resourcesyncrules
   verbs:
   - create
@@ -177,6 +171,13 @@ rules:
   - list
   - patch
   - update
+  - watch
+- apiGroups:
+  - clusterregistry.k8s.cisco.com
+  resources:
+  - clusters
+  verbs:
+  - list
   - watch
 - apiGroups:
   - coordination.k8s.io
