--- a/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
+++ b/internal/components/resourcesyncrule/testdata/rsr-expected-passive-resource-dump.yaml
@@ -225,12 +225,10 @@ spec:
         - objectKey:
             name: cp-v111x
             namespace: istio-system
-    - mutations:
+      mutations:
+        groupVersionKind:
+          kind: PeerIstioControlPlane
         overrides:
-          - parseValue: false
-            path: /kind
-            type: replace
-            value: PeerIstioControlPlane
           - parseValue: false
             path: /metadata/name
             type: replace
