--- a/internal/assets/manifests/resource-sync-rule/templates/mesh-controller-clusterrole.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/mesh-controller-clusterrole.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "name-with-revision" (dict "name" "mesh-controller" "context" $) }}
+  name: {{ include "name-with-revision" (dict "name" "istio-mesh-controller" "context" $) }}
   labels:
     cluster-registry.k8s.cisco.com/controller-aggregated: "true"
     release: {{ .Release.Name }}
