Use chart.yaml version for deploy/charts tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,4 +134,4 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: /deploy\/charts\/\d+.\d+.\d+/
+              only: /deploy\/charts\/v?\d+.\d+.\d+/
