manifest fixes     - imagepullsecrets format     - remove unnecessary validating webhook name format by distro     - add cisco distro specific istiod env vars     - remove pilot values in case of passive mode

--- a/internal/assets/manifests/istio-discovery/templates/serviceaccount.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/serviceaccount.yaml
@@ -1,7 +1,12 @@
 {{- if eq .Values.global.mode "ACTIVE" }}
 apiVersion: v1
 kind: ServiceAccount
-{{ include "toYamlIf" (dict "value" .Values.global.imagePullSecrets "key" "imagePullSecrets") }}
+{{ if .Values.global.imagePullSecrets }}
+imagePullSecrets:
+{{- range .Values.global.imagePullSecrets }}
+- name: {{ . }}
+{{- end }}
+{{ end }}
 metadata:
   name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
   namespace: {{ .Release.Namespace }}
