--- a/internal/components/discovery/testdata/icp-expected-values.yaml
+++ b/internal/components/discovery/testdata/icp-expected-values.yaml
@@ -34,8 +34,8 @@ global:
   tag: latest
   imagePullPolicy: Never
   imagePullSecrets:
-  - name: pullsecret-1
-  - name: pullsecret-2
+  - pullsecret-1
+  - pullsecret-2
   priorityClassName: high-priority
   defaultPodDisruptionBudget:
     enabled: true
@@ -55,7 +55,7 @@ global:
       aud: istio-ca
   oneNamespace: false
   caAddress: localhost
-  distribution: official
+  distribution: cisco
   meshID: mesh1
   meshNetworks:
     network1:
@@ -96,7 +96,19 @@ pilot:
     - name: PILOT_ENABLE_STATUS
       value: "true"
     - name: VALIDATION_WEBHOOK_CONFIG_NAME
-      value: istiod-cp-v111x-istio-system
+      value: istio-validator-cp-v111x-istio-system
+    - name: NAMESPACE_LE_NAME
+      value: istio-namespace-controller-election-cp-v111x
+    - name: VALIDATION_LE_NAME
+      value: istio-validation-controller-election-cp-v111x
+    - name: INGRESS_LE_NAME
+      value: istio-leader-cp-v111x
+    - name: CACERT_CONFIG_NAME
+      value: istio-ca-root-cert-cp-v111x
+    - name: MESHCONFIG_CONFIGMAP_NAME
+      value: istio-cp-v111x
+    - name: INJECTOR_CONFIGMAP_NAME
+      value: istio-sidecar-injector-cp-v111x
     - name: TEST_ENV
       value: test-env-value
   resources:
