--- a/internal/assets/manifests/istio-discovery/templates/reader-serviceaccount.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/reader-serviceaccount.yaml
@@ -1,6 +1,11 @@
 apiVersion: v1
 kind: ServiceAccount
-{{ include "toYamlIf" (dict "value" .Values.global.imagePullSecrets "key" "imagePullSecrets") }}
+{{ if .Values.global.imagePullSecrets }}
+imagePullSecrets:
+{{- range .Values.global.imagePullSecrets }}
+- name: {{ . }}
+{{- end }}
+{{ end }}
 metadata:
   name: {{ include "name-with-revision" ( dict "name" "istio-reader" "context" $) }}
   namespace: {{ .Release.Namespace }}
