--- a/internal/assets/manifests/istio-discovery/resources/gen-istio.yaml
+++ b/internal/assets/manifests/istio-discovery/resources/gen-istio.yaml
@@ -1,6 +1,6 @@
 ---
 # Source: istio-discovery/templates/poddisruptionbudget.yaml
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: istiod
