--- a/internal/assets/manifests/istio-discovery/templates/poddisruptionbudget.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/poddisruptionbudget.yaml
@@ -1,5 +1,5 @@
 {{- if and (eq .Values.global.mode "ACTIVE") .Values.global.defaultPodDisruptionBudget.enabled }}
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
