--- a/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
@@ -505,7 +505,11 @@ data:
           {{- if eq .Values.global.pilotCertProvider "istiod" }}
           - name: istiod-ca-cert
             configMap:
+              {{- if eq .Values.global.distribution "cisco" }}
+              name: istio-ca-root-cert-{{ .Values.revision }}
+              {{- else }}
               name: istio-ca-root-cert
+              {{- end }}
           {{- end }}
           {{- if .Values.global.mountMtlsCerts }}
           # Use the key and cert mounted to /etc/certs/ for the in-cluster mTLS communications.
@@ -723,7 +727,11 @@ data:
           {{- if eq .Values.global.pilotCertProvider "istiod" }}
           - name: istiod-ca-cert
             configMap:
+              {{- if eq .Values.global.distribution "cisco" }}
+              name: istio-ca-root-cert-{{ .Values.revision }}
+              {{- else }}
               name: istio-ca-root-cert
+              {{- end }}
           {{- end }}
           {{- if .Values.global.mountMtlsCerts }}
           # Use the key and cert mounted to /etc/certs/ for the in-cluster mTLS communications.
@@ -1032,7 +1040,11 @@ data:
           {{- if eq .Values.global.pilotCertProvider "istiod" }}
           - name: istiod-ca-cert
             configMap:
+              {{- if eq .Values.global.distribution "cisco" }}
+              name: istio-ca-root-cert-{{ .Values.revision }}
+              {{- else }}
               name: istio-ca-root-cert
+              {{- end }}
           {{- end }}
           {{- if isset .ObjectMeta.Annotations `sidecar.istio.io/userVolume` }}
           {{range $index, $value := fromJSON (index .ObjectMeta.Annotations `sidecar.istio.io/userVolume`) }}
