--- a/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
@@ -479,7 +479,11 @@ data:
           {{- if eq .Values.global.pilotCertProvider "istiod" }}
           - name: istiod-ca-cert
             configMap:
+              {{- if eq .Values.global.distribution "cisco" }}
+              name: istio-ca-root-cert-{{ .Values.revision }}
+              {{- else }}
               name: istio-ca-root-cert
+              {{- end }}
           {{- end }}
           {{- if .Values.global.mountMtlsCerts }}
           # Use the key and cert mounted to /etc/certs/ for the in-cluster mTLS communications.
@@ -697,7 +701,11 @@ data:
           {{- if eq .Values.global.pilotCertProvider "istiod" }}
           - name: istiod-ca-cert
             configMap:
+              {{- if eq .Values.global.distribution "cisco" }}
+              name: istio-ca-root-cert-{{ .Values.revision }}
+              {{- else }}
               name: istio-ca-root-cert
+              {{- end }}
           {{- end }}
           {{- if .Values.global.mountMtlsCerts }}
           # Use the key and cert mounted to /etc/certs/ for the in-cluster mTLS communications.
@@ -1006,7 +1014,11 @@ data:
           {{- if eq .Values.global.pilotCertProvider "istiod" }}
           - name: istiod-ca-cert
             configMap:
+              {{- if eq .Values.global.distribution "cisco" }}
+              name: istio-ca-root-cert-{{ .Values.revision }}
+              {{- else }}
               name: istio-ca-root-cert
+              {{- end }}
           {{- end }}
           {{- if isset .ObjectMeta.Annotations `sidecar.istio.io/userVolume` }}
           {{range $index, $value := fromJSON (index .ObjectMeta.Annotations `sidecar.istio.io/userVolume`) }}
