--- a/deploy/charts/istio-operator/templates/operator-rbac.yaml
+++ b/deploy/charts/istio-operator/templates/operator-rbac.yaml
@@ -21,6 +21,7 @@ rules:
   resources:
   - configmaps
   - endpoints
+  - resourcequotas
   - secrets
   - serviceaccounts
   - services
@@ -38,6 +39,12 @@ rules:
   - events
   verbs:
   - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - ""
   resources:
@@ -62,9 +69,12 @@ rules:
   resources:
   - pods
   verbs:
+  - delete
   - deletecollection
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - admissionregistration.k8s.io
