--- a/internal/components/discovery/testdata/icp-expected-values.yaml
+++ b/internal/components/discovery/testdata/icp-expected-values.yaml
@@ -173,6 +173,9 @@ revision: cp-v111x
 meshConfig:
   rootNamespace: istio-system
   connectTimeout: 5s
+  caCertificates:
+  - pem: "<pem content>"
+
 telemetry:
   v2:
     enabled: true
